--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-azure-core=1.10.0
-azure-identity=1.5.0
-azure-storage-blob=12.7.1
-azure-storage-file-share=12.4.1
-altair=4.1.0
 pyarrow==4.0.1
 numpy==1.19.5
 pandas==1.1.5
@@ -11,5 +6,9 @@ azure-identity
 PyPDF2==1.26.0
 pytest
 opencv-python-headless
-xlrd==1.2.0 
+xlrd==1.2.0
 dagster
+altair==4.1.0
+pyarrow==4.0.1
+numpy==1.19.5
+pandas==1.1.5
